modules/hosts/p520/k3s/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  type: NodePort
  selector:
    app: forgejo
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30300
  - name: ssh
    protocol: TCP
    port: 2222
    targetPort: 2222
    nodePort: 30222
